feature when creating new resume user can add skills delete