@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -49,7 +50,7 @@ public class SkillServiceImpl implements SkillService {
                                 .skillName(itemDto.getText())
                                 .isApproved(true)
                                 .build()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -63,16 +64,41 @@ public class SkillServiceImpl implements SkillService {
     }
 
     @Override
-    public void addSkillForResume(ResumeDto resumeDto, String skillName) {
+    public SkillDto addSkillForResume(ResumeDto resumeDto, String skillName) {
         resumeDto.setSkills(
                 resumeDto.getSkills() == null ?
                         new ArrayList<>() :
                         resumeDto.getSkills()
         );
 
-        resumeDto.getSkills().add(SkillDto.builder()
-                .skillName(skillName)
-                .isApproved(isSkillApproved(skillName))
-                .build());
+        if (
+                resumeDto.getSkills()
+                        .stream()
+                        .noneMatch(skill -> skill.getSkillName().equals(skillName))
+        ) {
+            resumeDto.getSkills().add(SkillDto.builder()
+                    .skillName(skillName)
+                    .isApproved(isSkillApproved(skillName))
+                    .build());
+        }
+
+        return resumeDto.getSkills().getLast();
+    }
+
+    @Override
+    public SkillDto deleteSkillBySkillName(String skill, ResumeDto resumeDto) {
+        if (skill == null || skill.isBlank())
+            throw new IllegalArgumentException("skill name cannot be null or blank");
+
+        List<SkillDto> skillDtos = resumeDto.getSkills();
+
+        if (skillDtos == null || skillDtos.isEmpty())
+            throw new IllegalArgumentException("skills are not exists");
+
+        skillDtos.removeIf(skillDto -> skillDto.getSkillName().equals(skill));
+        return SkillDto.builder()
+                .skillName(skill)
+                .isApproved(isSkillApproved(skill))
+                .build();
     }
 }
